# py_trees_meet_groot

./: .gitignore  LICENSE  README.md  pyproject.toml
src/py_trees_meet_groot/: __init__.py  groot_xml.py
tests/: test1.py  test1.xml  test2.py  test2.xml
